UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_StandardInterval__c/DSAT_StandardInterval__c.object-meta.xml
<CustomObject>
    <label>DSAT Standard Interval</label>
    <nameField>
        <label>DSAT Standard Interval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSAT Standard Intervals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>