UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_StandardInterval__c/fields/Lit__c.field-meta.xml
<CustomField>
    <fullName>Lit__c</fullName>
    <label>Lit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>