UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_StandardInterval__c/fields/X1001_2000FT__c.field-meta.xml
<CustomField>
    <fullName>X1001_2000FT__c</fullName>
    <label>1001-2000FT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>