UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_StandardInterval__c/fields/X2001_to_4000FT__c.field-meta.xml
<CustomField>
    <fullName>X2001_to_4000FT__c</fullName>
    <label>2001 to 4000FT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>