UCF-APR2.4/ftr main/force-app/main/default/objects/DSAT_StandardInterval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X1_1000FT__c</columns>
    <columns>X1001_2000FT__c</columns>
    <columns>X2001_to_4000FT__c</columns>
    <columns>State__c</columns>
    <columns>Lit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>